Revert "Final commit for backend"
This reverts commit 447fae5c1d2d38febefb85b39c515bac64dac960.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -46,15 +46,12 @@
                 android:text="Email Address"
                 android:textStyle="bold"
                 android:alpha="0.7"/>
-
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:drawableEnd="@drawable/done_icon"
-                android:inputType="textEmailAddress"
-                android:minHeight="48dp"
                 android:onClick="toReset"
-                tools:ignore="SpeakableTextPresentCheck" />
+                android:drawableEnd="@drawable/done_icon"
+                android:inputType="textEmailAddress"/>
 
 
             <View
@@ -66,15 +63,11 @@
                 android:text="Password"
                 android:textStyle="bold"
                 android:alpha="0.7"/>
-
             <EditText
-                android:id="@+id/T1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:drawableEnd="@drawable/done_icon"
-                android:inputType="textPassword"
-                android:minHeight="48dp"
-                tools:ignore="SpeakableTextPresentCheck" />
+                android:inputType="textPassword"/>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -85,17 +78,15 @@
                     android:text="Remember me"
                     android:layout_centerVertical="true"
                     android:alpha="0.6"/>
-
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:minHeight="48dp"
-                    android:onClick="toReset"
                     android:text="Forgot Password"
+                    android:onClick="toReset"
+                    android:layout_centerVertical="true"
+                    android:textStyle="bold"
                     android:textColor="@color/txtbg"
-                    android:textStyle="bold" />
+                    android:layout_alignParentEnd="true"/>
             </RelativeLayout>
 
             <View
