--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -53,7 +53,7 @@
 
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/UpdateProfile"
         android:layout_width="270dp"
         android:layout_height="48dp"
         android:layout_marginEnd="65dp"
@@ -65,7 +65,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <ImageView
-        android:id="@+id/imageView19"
+        android:id="@+id/profilepic"
         android:layout_width="152dp"
         android:layout_height="123dp"
         android:layout_marginStart="120dp"
@@ -88,6 +88,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
+        android:id="@+id/editTextName"
         android:layout_width="315dp"
         android:layout_height="48dp"
         android:layout_marginStart="50dp"
@@ -102,6 +103,7 @@
     </EditText>
 
     <EditText
+        android:id="@+id/editTextEmail"
         android:layout_width="315dp"
         android:layout_height="48dp"
         android:layout_marginStart="50dp"
@@ -115,6 +117,7 @@
     </EditText>
 
     <EditText
+        android:id="@+id/editTextPhoneNumber"
         android:layout_width="315dp"
         android:layout_height="48dp"
         android:layout_marginStart="48dp"
@@ -164,7 +167,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/editTextCountry"
         android:layout_width="315dp"
         android:layout_height="48dp"
         android:layout_marginStart="48dp"
